instance.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-operator-example-ui
spec:
  selector:
    app: jenkins-operator
  type: ClusterIP
  ports:
  - port: 8080
