service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-ui
spec:
  type: NodePort
  selector:
    app: jenkins-operator
  ports:
    - protocol: TCP
      port: 8080
      nodePort: 30880
