jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:          
  - host: jenkins.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-ui
          servicePort: 8080
